# nilenet-96

./: README.md  TAURI_README.md  TEMPLATE_INFO.md  TEMPLATE_INSTRUCTIONS.md  build-macos.sh  create_template.sh  index.html  nile.sh  package-lock.json  package.json  vite.config.ts
frontend/: index.html  package.json  vite.config.js
public/: manifest.json  sw.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddToHomeScreen.tsx  AllTabsView.tsx  BookmarksPage.tsx  Browser.tsx  BrowserMigration.tsx  BrowserView.tsx  DonationPrompt.tsx  DownloadsPage.tsx  EnhancedNavigation.tsx  HistoryPage.tsx  Homepage.tsx  LoginModal.tsx  MainFooter.tsx  NativeConfirmDialog.tsx  Onboarding.tsx  PrivateModeToggle.tsx  Profile.tsx  ProfileEditor.tsx  ProtocolHandler.tsx  SearchBar.tsx  SearchEngineInfo.tsx  SearchIndexing.tsx  Settings.tsx  TabBar.tsx  VersionsPage.tsx
src/components/browser/: ErrorModal.tsx
src/components/homepage/: ProfileSummary.tsx  QuickAccessTiles.tsx  TopProxySites.tsx  WeatherGreeting.tsx
src/components/macOS/: NativeMenuBar.tsx  TouchBarSupport.tsx
src/components/profile/: ProfileColorPicker.tsx
src/contexts/: AuthContext.tsx
src/hooks/: use-toast.ts  useBrowserShortcuts.ts  useKeyboardShortcuts.ts
src/lib/: supabase.ts  textTransform.ts  themes.ts
src/pages/: Index.tsx
