[package]
name = "nile-browser"
version = "0.1.0"
description = "Nile Browser - A modern web browser"
authors = ["you"]
license = ""
repository = ""
default-run = "nile-browser"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["shell-open", "window-all"] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]

# Optimize for old hardware
[profile.release]
lto = false
codegen-units = 16
opt-level = "s"
strip = true
panic = "abort"

[profile.dev]
incremental = true
opt-level = 1