[package]
name = "nile-browser"
version = "0.1.0"
description = "Nile Browser - A modern web browser (Tauri 2 migration)"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = "2.8.2"

[dependencies]
tauri = { version = "2.8.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking","json","stream"] }
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
